class iframeframe replaced with iframeframenews to center videos

--- a/news.html
+++ b/news.html
@@ -294,7 +294,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="news-video">
-                                        <div class="iframeframe">
+                                        <div class="iframeframnews">
                                             <iframe width="560" height="315" src="https://www.youtube.com/embed/v0DsCLK1PTg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
@@ -314,7 +314,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="news-video">
-                                        <div class="iframeframe">
+                                        <div class="iframeframnews">
                                             <iframe width="560" height="315" src="https://www.youtube.com/embed/HXgwca99iVw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
