ambum added 1968 and sharethis removed

--- a/theband.html
+++ b/theband.html
@@ -294,6 +294,9 @@
                             <div class="col-12-xs discography" data-year="1968">
                                 <h3 class="discography-item">The Birds, The Bees & the Monkees</h3>
                             </div>
+                            <div class="col-12-xs discography" data-year="1968">
+                                <h3 class="discography-item">Head</h3>
+                            </div>
                             <div class="col-12-xs discography" data-year="1969">
                                 <h3 class="discography-item">Instant Replay</h3>
                             </div>
