social-medial links updated and typo in news.html corrected

--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,7 @@
                                 <div class="wrapper-buttons">
                                     <input type="reset" class="btn btn-default btn-reset" value="Cancel">
                                     <button type="submit" class="btn btn-default btn-lg btn-signin">Submit</button>
-                                </div>
+                                 </div>
                             </div>
                         </div>
                     </form>
@@ -251,12 +251,14 @@
             <h5 class="uppercase text-center h5footer">Follow us!</h5>
 
             <ul class="list-inline social-media-area">
-                <li class="social-item"><a href="https://www.facebook.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span></a></li>
-                <li class="social-item"><a href="https://www.instagram.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.facebook.com/TheMonkees/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.youtube.com/user/themonkees" target="_blank"><span class="bg-social-icon"><i class="fa fa-youtube" aria-hidden="true"></i></span></a></li>
                 <li class="social-item"><a href="https://www.twitter.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span></a></li>
             </ul>
         </div>
     </footer>
+
+
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -298,8 +300,8 @@
             </div>
         </div>
     </div>
-
-
+    
+    
 
     <!--  JQuery-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
