--- a/news.html
+++ b/news.html
@@ -280,7 +280,7 @@
                 <div class="col-xs-12 col-md-offset-1 col-md-7 videos-wrapper">
                     <div class="row">
                         <div class="col-xs-12">
-                            <h2 class="page-subtitle text-center">The lastest</h2>
+                            <h2 class="page-subtitle text-center">The latest</h2>
                         </div>
                     </div>
 
@@ -349,9 +349,9 @@
             <h5 class="uppercase text-center h5footer">Follow us!</h5>
 
             <ul class="list-inline social-media-area">
-                <li class="social-item"><a href="https://www.facebook.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span></a></li>
-                <li class="social-item"><a href="https://www.instagram.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></span></a></li>
-                <li class="social-item"><a href="https://www.twitter.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.facebook.com/TheMonkees/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.youtube.com/user/themonkees" target="_blank"><span class="bg-social-icon"><i class="fa fa-youtube" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://twitter.com/themonkees?lang=en" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span></a></li>
             </ul>
         </div>
     </footer> 
