attribute donwload added to <a> to download the lyrics

--- a/listen.html
+++ b/listen.html
@@ -195,7 +195,7 @@
                                 <div class="row">
                                     <div class="col-xs-12  buy-download-share lyrics">
                                         <p>Download the lyrics!
-                                            <a href="text/Daydream_Believer.txt" target="_blank"><i class="song-links fa fa-download" aria-hidden="true"></i></a>
+                                            <a href="text/Daydream_Believer.txt" download><i class="song-links fa fa-download" aria-hidden="true"></i></a>
                                         </p>
                                     </div>
 
@@ -245,7 +245,7 @@
                                 <div class="row">
                                     <div class="col-xs-12  buy-download-share lyrics">
                                         <p>Download the lyrics!
-                                            <a href="text/I'm_a_believer.txt" target="_blank"><i class="song-links fa fa-download" aria-hidden="true"></i></a>
+                                            <a href="text/I'm_a_believer.txt" download><i class="song-links fa fa-download" aria-hidden="true"></i></a>
                                         </p>
                                     </div>
 
@@ -294,7 +294,7 @@
                                 <div class="row">
                                     <div class="col-xs-12  buy-download-share lyrics">
                                         <p>Download the lyrics!
-                                            <a href="text/Steppin_Stone.txt" target="_blank"><i class="song-links fa fa-download" aria-hidden="true"></i></a>
+                                            <a href="text/Steppin_Stone.txt" download><i class="song-links fa fa-download" aria-hidden="true"></i></a>
                                         </p>
                                     </div>
 
@@ -340,7 +340,7 @@
                                 <div class="row">
                                     <div class="col-xs-12  buy-download-share lyrics">
                                         <p>Download the lyrics!
-                                            <a href="text/Last_Train_to_Clarksville.txt" target="_blank"><i class="song-links fa fa-download" aria-hidden="true"></i></a>
+                                            <a href="text/Last_Train_to_Clarksville.txt" download><i class="song-links fa fa-download" aria-hidden="true"></i></a>
                                         </p>
                                     </div>
 
