typos updated and title video replaced with the correct one

--- a/listen.html
+++ b/listen.html
@@ -162,7 +162,7 @@
                 <div class="col-xs-12 classics">
                     <div class="row">
                         <div class="col-xs-12">
-                            <h2 class="page-subtitle text-center">Top classics</h2>
+                            <h2 class="page-subtitle text-center">Top classics!</h2>
                         </div>
                     </div>
 
