--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                 <div class="col-xs-12 col-md-6 contact-form-wrapper">
                     <div class="row">
                         <div class="col-xs-12">
-                            <h2 class="page-subtitle text-center">Would you like us to play in your event?</h2>
+                            <h2 class="page-subtitle text-center">Would you like us to play at your event?</h2>
                         </div>
                     </div>
 
@@ -107,7 +107,7 @@
                             <div class="col-sm-10">
                                 <select class="form-control" name="event" id="event" required>
                                     <option disabled selected value="">Select the type of event</option>
-                                    <option>Weeding</option>
+                                    <option>Wedding</option>
                                     <option>Birthday</option>
                                     <option>Corporate Event</option>
                                     <option>Other (please specify in the comments box below)</option>
@@ -193,7 +193,7 @@
                                 </div>
                                 <div class="media-body">
                                     <blockquote>
-                                        <p><i class="fa fa-quote-left" aria-hidden="true"></i>The best present in our weeding day was to see the Monkees play live in our special day!<i class="fa fa-quote-right" aria-hidden="true"></i></p>
+                                        <p><i class="fa fa-quote-left" aria-hidden="true"></i>The best present in our wedding day was to see the Monkees play live in our special day!<i class="fa fa-quote-right" aria-hidden="true"></i></p>
                                         <p>- Peter and Sarah</p>
                                     </blockquote>
                                 </div>
@@ -217,7 +217,7 @@
                                 </div>
                                 <div class="media-body">
                                     <blockquote>
-                                        <p><i class="fa fa-quote-left" aria-hidden="true"></i>The Monkees played in our Christmas party and since then I can't stop playing their song over and over again :)<i class="fa fa-quote-right" aria-hidden="true"></i></p>
+                                        <p><i class="fa fa-quote-left" aria-hidden="true"></i>The Monkees played at our Christmas party and since then I can't stop playing their song over and over again :)<i class="fa fa-quote-right" aria-hidden="true"></i></p>
                                         <p>- Marketing company</p>
                                     </blockquote>
                                 </div>
