--- a/news.html
+++ b/news.html
@@ -308,7 +308,7 @@
                         <div class="col-xs-12 video-block">
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <h3 class="text-center">The Monkees in the Mike & Micky Show - June 2018</h3>
+                                    <h3 class="text-center">Daydream Believer Monkees 50th Anniversary Tour NYC - June 2016</h3>
                                 </div>
                             </div>
                             <div class="row">
