width attribute removed in listen.htm

--- a/listen.html
+++ b/listen.html
@@ -14,7 +14,7 @@
     <!--link to font Awesome-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
-     <!-- My style sheete-->
+    <!-- My style sheete-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
     <title>The Monkees website</title>
@@ -170,9 +170,7 @@
                         <div class="col-xs-12 col-lg-6 wrapper-song">
                             <div class="row wrapper-player">
                                 <div class="col-xs-12 album">
-                                    <!--<div class="cover imgcover">-->
-                                    <img class="img-circle" src="images/album.jpg" alt="picture album Monkees" width="150" />
-                                    <!-- </div>-->
+                                    <img class="img-circle" src="images/album.jpg" alt="picture album Monkees" />
                                 </div>
 
                                 <div class="row">
@@ -221,9 +219,7 @@
                         <div class="col-xs-12 col-lg-6 wrapper-song">
                             <div class="row wrapper-player">
                                 <div class="col-xs-12 album">
-                                    <!--<div class="cover imgcover">-->
-                                    <img class="img-circle" src="images/album2.jpg" alt="picture album Monkees" width="150" />
-                                    <!-- </div>-->
+                                    <img class="img-circle" src="images/album2.jpg" alt="picture album Monkees"/>
                                 </div>
 
                                 <div class="row">
@@ -266,9 +262,7 @@
                             <div class="row wrapper-player">
                                 <div class="row">
                                     <div class="col-xs-12 album">
-                                        <!--<div class="cover imgcover">-->
-                                        <img class="img-circle" src="images/cover.jpg" alt="picture album Monkees" width="150" />
-                                        <!-- </div>-->
+                                        <img class="img-circle" src="images/cover.jpg" alt="picture album Monkees" />
                                     </div>
                                 </div>
 
@@ -315,9 +309,7 @@
                             <div class="row wrapper-player">
                                 <div class="row">
                                     <div class="col-xs-12 album">
-                                        <!--<div class="cover imgcover">-->
-                                        <img class="img-circle" src="images/cover1.jpg" alt="picture album Monkees" width="150" />
-                                        <!-- </div>-->
+                                        <img class="img-circle" src="images/cover1.jpg" alt="picture album Monkees" />
                                     </div>
                                 </div>
 
