comments added to index.html and space added in README.md file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body>
 
+  <!-- this header will only appear in small screens-->
   <header class="hight20-0 visible-xs">
     <a href="theband.html"><img src="images/logo.png" alt="log Monkees"></a>
   </header>
@@ -77,6 +78,7 @@
 
   <footer class="container-fluid hight20">
 
+  <!-- this won't only appear in small screens-->
     <div class="hidden-xs logo-md-lg">
       <a href="theband.html">
         <div class="circle">
