*classes not in used removed *lyrics updated with the right ones *modal check boxes aligned to left

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
       <div class="carousel-inner" role="listbox">
 
         <div class="item active">
-          <img class="first-slide" src="images/photo1.jpg" alt="First slide">
+          <img src="images/photo1.jpg" alt="First slide">
         </div>
 
         <div class="item">
-          <img class="second-slide" src="images/photo8b.jpg" alt="Second slide">
+          <img src="images/photo8b.jpg" alt="Second slide">
         </div>
 
         <div class="item">
-          <img class="third-slide" src="images/photo9b.jpg" alt="Third slide">
+          <img src="images/photo9b.jpg" alt="Third slide">
         </div>
 
       </div>
