--- a/listen.html
+++ b/listen.html
@@ -402,12 +402,12 @@
                             <input type="email" name="email" class="form-control" id="InputEmail1" placeholder="Enter your email" required>
                         </div>
                         <div class="wrapper-check">
-                            <div class="checkbox newsletter">
+                            <div class="checkbox">
                                 <label>
                                  <input type="checkbox"  name="subscribe" checked> Subscribe me to the monthly newsletter.
                                 </label>
                             </div>
-                            <div class="checkbox offers">
+                            <div class="checkbox">
                                 <label>
                                  <input type="checkbox" name="offers"> Send emails with offers about concerts.
                             </label>
