images not needed removed from repository and image for I'm a believer song replaced with other one

--- a/listen.html
+++ b/listen.html
@@ -219,7 +219,7 @@
                         <div class="col-xs-12 col-lg-6 wrapper-song">
                             <div class="row wrapper-player">
                                 <div class="col-xs-12 album">
-                                    <img class="img-circle" src="images/album2.jpg" alt="picture album Monkees"/>
+                                    <img class="img-circle" src="images/believer.jpg" alt="picture album Monkees"/>
                                 </div>
 
                                 <div class="row">
