comments added and pages titles updated

--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,21 @@
 
 
     <!--link to bootstrap stylesheet-->
+    <!--boostrap has been used in this page to add the navigation bar, to use the grid system, to add the modal (after clicking on 'subscribe'), 
+    to add the form inside the modal, to add the form on the section, to add the media object used for the quotes, to change the shape of the images and to create the horizontal 
+    description lists on the footer-->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 
     <!--link to font Awesome-->
+    <!--Font Awesome has been used in the page to add the icons on the naviagtion bar, to add the quotation marks and to add the icons for the social media links on the footer-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
-    <!-- My style sheete-->
+    <!-- My style sheet-->
+    <!-- with my style sheet I have added my own styles and overwritten the original bootstrap and font awesome styles-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
-    <title>The Monkees website</title>
+    <title>The Monkees website - contact</title>
 
 </head>
 
@@ -37,7 +43,7 @@
                 </div>
 
 
-                <!--NAV-->
+                <!--NAV from bootstrap-->
 
 
                 <div class="col-xs-6 col-sm-10 bg-nav">
@@ -168,7 +174,7 @@
                                 <div class="wrapper-buttons">
                                     <input type="reset" class="btn btn-default btn-reset" value="Cancel">
                                     <button type="submit" class="btn btn-default btn-lg btn-signin">Submit</button>
-                                 </div>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -260,7 +266,7 @@
 
 
 
-    <!-- Modal -->
+    <!-- Modal from bootstrap-->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -300,8 +306,8 @@
             </div>
         </div>
     </div>
-    
-    
+
+
 
     <!--  JQuery-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
