--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--link to bootstrap stylesheet-->
+  <!--boostrap has been used in this page to add the Carousel-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 
   <!-- My style sheet-->
+  <!-- with my style sheet I have added my own styles and overwritten the original bootstrap style-->
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 
   <title>The Monkees website</title>
@@ -29,7 +31,7 @@
 
   <section class="hight60-80">
 
-    <!-- Carousel ================================================== -->
+    <!-- Carousel from bootstrap ================================================== -->
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
