--- a/listen.html
+++ b/listen.html
@@ -8,16 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <!--link to bootstrap stylesheet-->
+   
+     <!--link to bootstrap stylesheet-->
+    <!--boostrap has been used in this page to add the navigation bar, to use the grid system, to add the modal (after clicking on 'subscribe') 
+    and to create the horizontal description lists on the footer-->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 
     <!--link to font Awesome-->
+    <!--Font Awesome has been used in the page to add the icons on the naviagtion bar, to add icons for "download" and "share" and to add the icons for the social media links on the footer-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
-    <!-- My style sheete-->
+    <!-- My style sheet-->
+    <!-- with my style sheet I have added my own styles and overwritten the original bootstrap and font awesome styles-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-
-    <title>The Monkees website</title>
+    
+    
+    <title>The Monkees website - listen</title>
 
 </head>
 
@@ -37,7 +44,7 @@
                 </div>
 
 
-                <!--NAV-->
+                <!--NAV from bootstrap-->
 
 
                 <div class="col-xs-6 col-sm-10 bg-nav">
@@ -384,7 +391,7 @@
 
 
 
-    <!-- Modal -->
+    <!-- Modal from bootstrap-->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
