--- a/theband.html
+++ b/theband.html
@@ -9,15 +9,19 @@
 
 
     <!--link to bootstrap stylesheet-->
+    <!--boostrap has been used in this page to add the navigation bar, to use the grid system, to add the modal (after clicking on 'subscribe'), to add typography (i.e. centering text), to add the form inside the modal, to change the shape of the images and to create the horizontal description lists on the footer-->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 
     <!--link to font Awesome-->
+    <!--Font Awesome has been used in the page to add the icons on the navigation bar and to add the icons for the social media links on the footer--> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
-    <!-- My style sheete-->
+    <!-- My style sheet-->
+    <!-- with my style sheet I have added my own styles and overwritten the original bootstrap and font awesome styles-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
-    <title>The Monkees website</title>
+    <title>The Monkees website - the band</title>
 
 </head>
 
@@ -37,7 +41,7 @@
                 </div>
 
 
-                <!--NAV-->
+                <!--NAV from bootstrap-->
 
 
                 <div class="col-xs-6 col-sm-10 bg-nav">
@@ -179,7 +183,7 @@
 
 
 
-            <!--memebers-->
+            <!--members-->
 
             <div class="row member-disco">
 
@@ -343,7 +347,7 @@
             </dl>
         </div>
 
-             <div class="bg-social">
+        <div class="bg-social">
 
             <h5 class="uppercase text-center h5footer">Follow us!</h5>
 
@@ -356,7 +360,7 @@
     </footer>
 
 
-    <!-- Modal -->
+    <!-- Modal from bootstrap-->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -366,6 +370,7 @@
                 </div>
                 <div class="modal-body">
 
+                    <!--form from bootstrap-->
                     <form>
                         <div class="form-group">
                             <input type="text" name="name" class="form-control" id="InputName" placeholder="Enter your name" required>
