--- a/news.html
+++ b/news.html
@@ -7,24 +7,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
     <!--link to bootstrap stylesheet-->
+    <!--boostrap has been used in this page to add the navigation bar, to use the grid system, to add progress-bars, 
+    to add labels and buttons, to add the modals (after clicking on 'subscribe' and after clicking on 'Buy Now'), to add the form inside the modals, to change 
+    the shape of the images and to create the horizontal description lists on the footer-->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 
     <!--link to font Awesome-->
+    <!--Font Awesome has been used in the page to add the icons on the naviagtion bar, to add the icon inside the "Sold out" label and to add the icons for the social media links on the footer-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
-    <!-- My style sheete-->
+    <!-- My style sheet-->
+    <!-- with my style sheet I have added my own styles and overwritten the original bootstrap and font awesome styles-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
-    <title>The Monkees website</title>
+
+    <title>The Monkees website - news</title>
 
 </head>
 
 
 <body>
 
-  <header class="conainer-fluid header-content">
+    <header class="conainer-fluid header-content">
         <div class="wrapper-header">
 
             <div class="row">
@@ -35,7 +41,7 @@
                 </div>
 
 
-                <!--NAV-->
+                <!--NAV from bootstrap-->
 
 
                 <div class="col-xs-6 col-sm-10 bg-nav">
@@ -77,7 +83,7 @@
 
 
 
-   
+
     <section class="container-fluid bg-section">
         <div class="wrapper-section">
 
@@ -329,9 +335,9 @@
         </div>
     </section>
 
- 
 
-  <footer class="container-fluid footer bg-all-footer">
+
+    <footer class="container-fluid footer bg-all-footer">
 
 
         <div class="bg-contactus">
@@ -354,10 +360,10 @@
                 <li class="social-item"><a href="https://twitter.com/themonkees?lang=en" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span></a></li>
             </ul>
         </div>
-    </footer> 
+    </footer>
 
 
- <!-- Modal -->
+    <!-- Modal from bootstrap-->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -398,9 +404,9 @@
         </div>
     </div>
 
- 
 
-    <!--Modal book tickets-->
+
+    <!--Modal from bootstrap - book tickets-->
     <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -438,11 +444,11 @@
 
 
     <!--  JQuery-->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <!-- JavaScript Bootstrap-->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <!-- JavaScript Bootstrap-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
- 
+
 
 </body>
 
